--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,36 @@
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div>
+  <ul class="timeline">
+    <li ng-repeat="thing in things">
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">
+            {{thing.summary}}
+          </h4>
+          <p class="small text-muted">
+            <i class="glyphicon glyphicon-time"></i>
+            <span>{{thing.date | date : format : shortDate}}</span>
+          </p>
+        </div>
+        <div class="timeline-body">
+          <p ng-show="thing.description">
+            {{thing.description}}
+          </p>
+          <ul ng-show="thing.files">
+            <li ng-repeat="file in thing.files">
+              <span>{{file.filename}}</span>
+            </li>
+          </ul>
+          <ul ng-show="thing.tags" class="list-inline">
+            <li ng-repeat="tag in thing.tags">
+              <span class="badge">{{tag}}</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </li>
+  </ul>
 </div>
