--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,13 @@ body {
   padding: 0;
 }
 
+.navbar-brand {
+  img {
+    display: inline;
+    margin-right: 10px;
+  }
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
