--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,25 +1,23 @@
 <div ng-repeat="thing in things | orderBy:'id':true">
   <div class="timeline-panel">
     <div class="timeline-heading">
-      <h4 ng-show="thing.title">
+      <h3 ng-show="thing.title">
         {{thing.title}}
-      </h4>
-      <h5>
-        {{thing.map.distance.value / 1000 | number:1}} kilometres / {{thing.map.distance.value * 0.000621371 | number:1}} miles
+      </h3>
+      <h4>
+        {{thing.map.distance.value / 1000 | number:1}} kilometres / {{thing.map.distance.value * 0.000621371 | number:1}} miles,
+        {{thing.duration}}
       </h4>
       <div class="clearfix" style="margin-bottom: 10px;">
         <a href="{{country.url}}" ng-repeat="country in thing.countries">
           <img src="images/flags/{{country.code}}.png" alt="flag of {{country.code}}" class="pull-left rounded" style="margin-right: 10px;" />
         </a>
       </div>
-      <div class="clearfix">
-        <a href="{{picture}}=h1080" ng-repeat="picture in thing.pictures">
-          <img src="{{picture}}=h180" class="pull-left rounded" style="margin-right: 10px; margin-bottom: 10px;" />
-        </a>
-      </div>
-      <p ng-show="thing.summary && (thing.title != thing.summary)">
-        {{thing.summary}}
-      </p>
+      <a href="{{thing.header_picture}}=h1080" ng-show="thing.header_picture">
+        <img src="{{thing.header_picture}}=w700" class="rounded" style="margin-bottom: 10px;" />
+      </a>
+    </div>
+    <div class="timeline-body">
       <p class="small text-muted" ng-repeat="waypoint in thing.waypoints">
         <i class="glyphicon glyphicon-time"></i>
         {{waypoint.time}}
@@ -32,13 +30,18 @@
           {{waypoint.place}}
         </span>
       </p>
-      <p><a href="https://www.facebook.com/rob.thijssen/posts/{{thing.facebook}}" ng-show="thing.facebook">facebook</a></p>
-    </div>
-    <div class="timeline-body">
-      <p ng-show="thing.description">
-        {{thing.description}}
+      <p ng-show="thing.summary && (thing.title != thing.summary)">
+        {{thing.summary}}
       </p>
-      <leaflet id="{{thing.id}}" ng-show="thing.map" lf-center="thing.map.centre" paths="thing.map.paths" width="100%" height="480px"></leaflet>
+      <p><a href="https://www.facebook.com/rob.thijssen/posts/{{thing.facebook}}" ng-show="thing.facebook">facebook</a></p>
+      <div style="margin-bottom: 10px;">
+        <leaflet id="{{thing.id}}" ng-show="thing.map" lf-center="thing.map.centre" paths="thing.map.paths" width="100%" height="480px"></leaflet>
+      </div>
+      <div class="clearfix">
+        <a href="{{picture}}=h1080" ng-repeat="picture in thing.pictures">
+          <img src="{{picture}}=h180" class="pull-left rounded" style="margin-right: 10px; margin-bottom: 10px;" />
+        </a>
+      </div>
       <ul ng-show="thing.tags" class="list-inline">
         <li ng-repeat="tag in thing.tags">
           <span class="badge">{{tag}}</span>
@@ -46,4 +49,5 @@
       </ul>
     </div>
   </div>
+  <hr />
 </div>
